# CloudFerro-test

./: CMakeLists.txt  README.md
src/: main.cpp  sample.cpp  server.cpp  server.h
test/: CMakeLists.txt  test_add_employes.cpp  test_check_cache.cpp  utilites.cpp  utilities.h
